<resources>
    <string name="app_name">LESSON03</string>
    <string name="screen_login">Login</string>
    <string name="edit_text_user">User</string>
    <string name="edit_text_password">Password</string>
    <string name="button_login">login</string>
    <string name="create_account">Create New Account?</string>
    <string name="button_create_account">Sign Un</string>
    <string name="screen_sign_up">Signup</string>
    <string name="edit_text_confirm_password">Confirm Password</string>
    <string name="button_sign_up">sign up</string>
    <string name="have_account">Have An Account?</string>
    <string name="button_have_account">Login</string>
</resources>
