<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/padding">
    <TextView android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:text="@string/screen_login"
              android:textSize="@dimen/screen_login_size"
              android:layout_centerHorizontal="true"
    />
    <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/edit_text_user"
            android:textSize="@dimen/edit_text_user_password_size"
            android:inputType="text"
            android:id="@+id/screen_login"
            android:layout_centerHorizontal="true"
            android:layout_alignParentTop="true"
            android:layout_marginTop="@dimen/edit_text_user_margin_top"
    />
    <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/edit_text_password"
            android:inputType="textPassword"
            android:textSize="@dimen/edit_text_user_password_size"
            android:layout_centerHorizontal="true"
            android:id="@+id/screen_password"
            android:layout_below="@id/screen_login"
    />
    <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_login"
            android:textSize="@dimen/button_login_size"
            android:layout_below="@id/screen_password"
            android:id="@+id/button_login"
            android:layout_marginTop="@dimen/button_login_margin_top"
    />
    <TextView
            android:layout_width="wrap_content"
            android:text="@string/create_account"
            android:layout_height="wrap_content"
            android:textSize="@dimen/create_account_size"
            android:layout_below="@id/button_login"
            android:id="@+id/create_new_account"
            android:layout_marginTop="@dimen/create_account_margin_top"
            android:layout_alignParentStart="true"
            android:layout_marginLeft="@dimen/create_account_margin_left_start"
            android:layout_marginStart="@dimen/create_account_margin_left_start"
            android:layout_alignParentLeft="true"/>
    <Button
            android:layout_width="wrap_content"
            android:layout_height="@dimen/button_create_account_height"
            android:textAllCaps="false"
            android:text="@string/button_create_account"
            android:textSize="@dimen/button_create_account_size"
            android:background="@color/white"
            android:layout_alignTop="@+id/create_new_account"
            android:layout_toRightOf="@+id/create_new_account"
            android:layout_toEndOf="@id/create_new_account"
            android:onClick="register"/>

</RelativeLayout>